# libmarkovsqlite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: MarkovConfig.cmake.in
include/markov/: connection.hpp  exception.hpp  utils.hpp
src/: connecion.cpp
